dispatch enter/exit events on TextTrackCue/VTTCue with no track https://bugs.webkit.org/show_bug.cgi?id=298227 rdar://160195643

Reviewed by Alicia Boya Garcia and Eric Carlson.

This removes the constraint to have a track associated for dispatching
events. Then as it inherits from the normal dispatchEvent, it doesn't
require its own declaration.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/onenter-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/interfaces/TextTrackCue/onexit-expected.txt:
* Source/WebCore/html/track/TextTrackCue.cpp:
(WebCore::TextTrackCue::dispatchEvent): Deleted
* Source/WebCore/html/track/TextTrackCue.h:
(WebCore::TextTrackCue::dispatchEvent): Deleted

Canonical link: https://commits.webkit.org/301836@main